<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">SpreeWarehouse</string>
    <string name="menu_settings">Settings</string>

	<string name="server">Server Name:</string>
	<string name="user">User:</string>
	<string name="password">Password:</string>
	<string name="apikey">API Key:</string>

	<string name="reset">Reset</string>
	<string name="set_up">Set up</string>
	
</resources>
